@@ -1,3 +1,8 @@
+2011-09-10
+* if we have ELF files we can do a much better job at getting the strings from
+the binary by just looking at a few sections which we can get using readelf.
+All other files are still checked using the old 'strings' method.
+
 2011-09-06
 * rework splitting \r because it didn't work for various reasons. Also, we are
 actually right now just interested in getting rid of \r\n in HTTP code.
